fix(email templates): update branding from Thryvo to FileCapsa in email configurations

--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -2,7 +2,7 @@
 <tr>
   <td>
     <p>
-      Thank you for registering with thryvo. To complete your registration,
+      Thank you for registering with FileCapsa. To complete your registration,
       please verify your account using the One-Time Password (OTP) below:
     </p>
   </td>
