--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thryvo</title>
+    <title>FileCapsa</title>
   </head>
 
   <body style="padding: 0; margin: 0; box-sizing: border-box">
@@ -41,7 +41,7 @@
                     line-height: 45px;
                   "
                 >
-                  thryvo
+                  FileCapsa
                 </h1>
               </td>
             </tr>
@@ -59,8 +59,8 @@
             <tr>
               <td style="line-height: 0.4">
                 <p>Best Regards,</p>
-                <p style="color: #f8aa31; font-weight: 500">Mgbada Anthony</p>
-                <p style="color: #7a7a7a">CEO, thryvo</p>
+                <p style="color: #f8aa31; font-weight: 500">Daniel</p>
+                <p style="color: #7a7a7a">CEO, FileCapsa</p>
               </td>
             </tr>
             <tr>
@@ -121,7 +121,7 @@
             <tr>
               <td style="text-align: center; padding: 20px">
                 <a
-                  href="https://thryvo.com.ng/privacy-policy"
+                  href="https://filecapsa.com/privacy-policy"
                   style="
                     text-decoration: none;
                     color: #a3a3a3;
@@ -130,7 +130,7 @@
                   >Privacy Policy</a
                 >
                 <a
-                  href="https://thryvo.com.ng/tos"
+                  href="https://filecapsa.com/tos"
                   style="
                     text-decoration: none;
                     color: #a3a3a3;
@@ -139,7 +139,7 @@
                   >Terms of Service</a
                 >
                 <a
-                  href="https://thryvo.com.ng/contact"
+                  href="https://filecapsa.com/contact"
                   style="
                     text-decoration: none;
                     color: #a3a3a3;
@@ -148,7 +148,7 @@
                   >Help Center</a
                 >
                 <a
-                  href="https://thryvo.com.ng/"
+                  href="https://filecapsa.com/"
                   style="text-decoration: none; color: #a3a3a3"
                   >Unsubscribe</a
                 >
@@ -156,7 +156,7 @@
             </tr>
             <tr>
               <td style="text-align: center">
-                &copy; thryvo. All rights reserved.
+                &copy; FileCapsa. All rights reserved.
               </td>
             </tr>
           </table>
